2002-02-03 20:15
 Result:
  - Added metadata query methods
  - Removed unnecessary friendship with Tuple
2002-02-03 06:00
 Docs:
  - More examples
 Makefile:
  - No longer removes old library.  Same difference.
  - Abstracted away source tarball, source directory name
2002-02-02 18:45
 Docs:
  - More on exceptions, more on executing queries.
 Makefile:
  - Now builds an actual (but static) library
2002-01-26 21:15
 CVS:
  - Imported into CVS
 Makefile:
  - Fixed "std namespace compiler workaround" breako
  - Added "dist" target
2002-01-26 00:30
 All:
  - New #define PGSTD to replace std if needed
 Compiler:
  - New header pg_compiler.h
  - Genericized workaround for missing numeric_limits
  - Disable braindead Microsoft Visual C++ warnings
2002-01-20 14:50
 Result:
  - Fixed Result::Field::name() -- thanks to Gilberto Ribeiro de Queiroz
2002-01-08 21:50
 TableWriter:
  - operator= forgot to return *this
 Test9:
  - Created to test TableWriter's back_insert_iterator
2002-01-07 00:15
 TableWriter:
  - Implemented back_insert_iterator<TableWriter>
2002-01-01 23:45
 TableWriter:
  - Forgot to separate fields in output
 Tests:
  - Rearranged to set up their own database environment
  - New test writes orgevents table
 Transaction:
  - Merged "clean" state into "active" state
  - Moved back-end COMMIT into Transaction's destructor
2001-12-30 18:00
 Docs:
  - Added why-a-new-library section
  - Explained transactions
 Transaction:
  - Abort no longer does a redundant ABORT WORK if already aborted
2001-12-23 22:30
 Docs:
  - Mentions Trigger and TableStream now
2001-12-23 14:40
 Connection:
  - Support removal of triggers
  - Reserved AddTrigger() and RemoveTrigger() for use by Trigger
 Test3:
  - Updated for revised Transactor interface
 Test4:
  - Changed "Got [] rows" in output to "Got [] row(s)"
 Test5:
  - Updated for revised Trigger interface
 Test7:
  - Updated for revised Transactor interface
 Transactor:
  - Built name into Transactor as data member