@@ -1,3 +1,8 @@
+2002-02-15 01:30
+ Docs:
+  - More explanation on transaction bracketing
+ Transaction:
+  - Deferring commits to destruction time was wrong
 2002-02-03 20:15
  Result:
   - Added metadata query methods
